[gd_scene load_steps=12 format=3 uid="uid://quv13al6d0vi"]

[ext_resource type="Script" path="res://Script/character_shopping.gd" id="1_nbloe"]
[ext_resource type="FontFile" uid="uid://dat0ka8ygoodr" path="res://Assets/Font/LilitaOne-Regular.ttf" id="2_nxmgy"]
[ext_resource type="Texture2D" uid="uid://j4sw1dum4o5j" path="res://Assets/Tiles/tile_0104.png" id="3_7xbd0"]
[ext_resource type="Texture2D" uid="uid://bcu8neutq4tp4" path="res://Assets/Tiles/tile_0067.png" id="3_nrf1k"]
[ext_resource type="Texture2D" uid="uid://dnkcbfuq6syut" path="res://Assets/Tiles/tile_0151.png" id="4_gjd31"]
[ext_resource type="PackedScene" uid="uid://0iug0valk5pi" path="res://Scenes/animated_sprite_2d.tscn" id="5_0kj3q"]

[sub_resource type="LabelSettings" id="LabelSettings_nnyum"]
font = ExtResource("2_nxmgy")
font_size = 36
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jmqru"]
font = ExtResource("2_nxmgy")
font_size = 64
outline_size = 3

[sub_resource type="SpriteFrames" id="SpriteFrames_qo4sm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6yttd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vuq8h"]

[node name="CharacterShopping" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nbloe")

[node name="UI" type="Node2D" parent="."]

[node name="Level text" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 242.0
offset_top = 18.0
offset_right = 334.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "SLAVE GROCERY"
label_settings = SubResource("LabelSettings_nnyum")
metadata/_edit_use_anchors_ = true

[node name="Node_Diamond" type="Node" parent="UI"]

[node name="Diamond" type="TextureRect" parent="UI/Node_Diamond"]
offset_left = 32.0
offset_top = 54.0
offset_right = 62.0
offset_bottom = 84.0
scale = Vector2(0.776017, 0.843523)
texture = ExtResource("3_nrf1k")

[node name="Label" type="Label" parent="UI/Node_Diamond"]
offset_left = 57.0
offset_top = 60.0
offset_right = 146.0
offset_bottom = 148.0
scale = Vector2(0.209957, 0.170129)
label_settings = SubResource("LabelSettings_jmqru")

[node name="Node _ Coins" type="Node" parent="UI"]

[node name="Coins" type="TextureRect" parent="UI/Node _ Coins"]
offset_left = 29.0
offset_top = 16.0
offset_right = 59.0
offset_bottom = 46.0
texture = ExtResource("4_gjd31")

[node name="Label" type="Label" parent="UI/Node _ Coins"]
offset_left = 57.0
offset_top = 26.0
offset_right = 146.0
offset_bottom = 101.0
scale = Vector2(0.209957, 0.170129)
label_settings = SubResource("LabelSettings_jmqru")

[node name="Shopping_stuffs" type="Node2D" parent="UI"]

[node name="First" type="Node2D" parent="UI/Shopping_stuffs"]

[node name="Button1" type="Button" parent="UI/Shopping_stuffs/First"]
offset_left = 59.0
offset_top = 129.0
offset_right = 137.0
offset_bottom = 242.0
scale = Vector2(1.09088, 0.945307)
focus_mode = 0
flat = true

[node name="AnimatedSprite2D" parent="UI/Shopping_stuffs/First" instance=ExtResource("5_0kj3q")]
position = Vector2(101, 181)
scale = Vector2(4.03, 4.03)
sprite_frames = SubResource("SpriteFrames_qo4sm")
flip_h = false

[node name="Price Tag" type="Label" parent="UI/Shopping_stuffs/First"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 37.0
offset_top = 250.0
offset_right = 171.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "owned"
label_settings = SubResource("LabelSettings_nnyum")
horizontal_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Second" type="Node2D" parent="UI/Shopping_stuffs"]

[node name="Button2" type="Button" parent="UI/Shopping_stuffs/Second"]
offset_left = 229.0
offset_top = 129.0
offset_right = 307.0
offset_bottom = 242.0
scale = Vector2(1.09088, 0.945307)
focus_mode = 0
flat = true

[node name="AnimatedSprite2D2" parent="UI/Shopping_stuffs/Second" instance=ExtResource("5_0kj3q")]
position = Vector2(272, 181)
scale = Vector2(4.03, 4.03)
sprite_frames = SubResource("SpriteFrames_6yttd")
flip_h = false

[node name="Price" type="Node2D" parent="UI/Shopping_stuffs/Second"]

[node name="Coins" type="TextureRect" parent="UI/Shopping_stuffs/Second/Price"]
offset_left = 228.0
offset_top = 61.0
offset_right = 258.0
offset_bottom = 91.0
texture = ExtResource("4_gjd31")

[node name="coin_label" type="Label" parent="UI/Shopping_stuffs/Second/Price"]
offset_left = 256.0
offset_top = 71.0
offset_right = 345.0
offset_bottom = 146.0
scale = Vector2(0.209957, 0.170129)
text = "x 500"
label_settings = SubResource("LabelSettings_jmqru")

[node name="Diamond" type="TextureRect" parent="UI/Shopping_stuffs/Second/Price"]
offset_left = 231.0
offset_top = 88.0
offset_right = 261.0
offset_bottom = 118.0
scale = Vector2(0.776017, 0.843523)
texture = ExtResource("3_nrf1k")

[node name="diamond_label" type="Label" parent="UI/Shopping_stuffs/Second/Price"]
offset_left = 256.0
offset_top = 94.0
offset_right = 345.0
offset_bottom = 182.0
scale = Vector2(0.209957, 0.170129)
text = "x 100"
label_settings = SubResource("LabelSettings_jmqru")

[node name="Price Tag" type="Label" parent="UI/Shopping_stuffs/Second"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 208.0
offset_top = 250.0
offset_right = 342.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "buy"
label_settings = SubResource("LabelSettings_nnyum")
horizontal_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Third" type="Node2D" parent="UI/Shopping_stuffs"]

[node name="Button3" type="Button" parent="UI/Shopping_stuffs/Third"]
offset_left = 401.0
offset_top = 129.0
offset_right = 479.0
offset_bottom = 242.0
scale = Vector2(1.09088, 0.945307)
focus_mode = 0
flat = true

[node name="AnimatedSprite2D" parent="UI/Shopping_stuffs/Third" instance=ExtResource("5_0kj3q")]
position = Vector2(443, 181)
scale = Vector2(4.03, 4.03)
sprite_frames = SubResource("SpriteFrames_vuq8h")
flip_h = false

[node name="Price" type="Node2D" parent="UI/Shopping_stuffs/Third"]

[node name="Coins" type="TextureRect" parent="UI/Shopping_stuffs/Third/Price"]
offset_left = 398.0
offset_top = 59.0
offset_right = 428.0
offset_bottom = 89.0
texture = ExtResource("4_gjd31")

[node name="coin_label" type="Label" parent="UI/Shopping_stuffs/Third/Price"]
offset_left = 426.0
offset_top = 69.0
offset_right = 515.0
offset_bottom = 144.0
scale = Vector2(0.209957, 0.170129)
text = "x 500"
label_settings = SubResource("LabelSettings_jmqru")

[node name="Diamond" type="TextureRect" parent="UI/Shopping_stuffs/Third/Price"]
offset_left = 401.0
offset_top = 86.0
offset_right = 431.0
offset_bottom = 116.0
scale = Vector2(0.776017, 0.843523)
texture = ExtResource("3_nrf1k")

[node name="diamond_label" type="Label" parent="UI/Shopping_stuffs/Third/Price"]
offset_left = 426.0
offset_top = 92.0
offset_right = 515.0
offset_bottom = 180.0
scale = Vector2(0.209957, 0.170129)
text = "x 100"
label_settings = SubResource("LabelSettings_jmqru")

[node name="Price Tag" type="Label" parent="UI/Shopping_stuffs/Third"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 379.0
offset_top = 250.0
offset_right = 513.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "buy"
label_settings = SubResource("LabelSettings_nnyum")
horizontal_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2(576, 324)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
offset_right = 577.0
offset_bottom = 325.0
texture = ExtResource("3_7xbd0")

[connection signal="pressed" from="UI/Shopping_stuffs/First/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="UI/Shopping_stuffs/Second/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="UI/Shopping_stuffs/Third/Button3" to="." method="_on_button_3_pressed"]
